# text2gene2

./: .clauderc  .env.example  .gitignore  CLAUDE.md  DATA_SOURCES.md  QUERY_EXPANSION.md  STACKS.md  pyproject.toml
benchmarks/: .gitignore  build_hht_dataset.py  build_rare_dataset.py  curate_pilot.py  curation_report.tsv  fetch_fulltext.py  hht_benchmark.tsv  pilot_report.tsv  rare_variants.tsv  verify_pilot.py
deploy/: install.sh  nginx.conf  text2gene2.service
src/text2gene2/: __init__.py  cache.py  cli.py  config.py  db.py  models.py  rate_limit.py
src/text2gene2/api/: app.py  routes.py
src/text2gene2/lvg/: __init__.py  expander.py
src/text2gene2/pipeline/: __init__.py  enrich.py  expand.py  fanout.py
src/text2gene2/sources/: __init__.py  base.py  clinvar.py  europepmc.py  google_cse.py  litvar2.py
src/text2gene2/templates/: base.html  harvest.html  index.html  search.html
