[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text2gene2"
version = "2.0.0"
description = "Given an HGVS variant, find all relevant PubMed literature"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis[hiredis]>=5.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "typer>=0.15",
    "tenacity>=9.0",
    "biopython>=1.84",       # Entrez / ClinVar queries
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "httpx>=0.28",
    "ruff>=0.8",
]
benchmark = [
    "metapub>=0.5",
]

[project.scripts]
hgvs2pmid = "text2gene2.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/text2gene2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
